<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".feature.signUp.view.SelectRoleFragment">

        <LinearLayout
            android:id="@+id/linear_layout_title"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/radio_group_select_role"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_view_title"
                style="@style/TextAppearance.TailorMade.Headline3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/select_role_label"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/text_view_description"
                style="@style/TextAppearance.TailorMade.Body2.BlackHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/select_role_info_label"
                 />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group_select_role"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radio_button_select_role_user"
                style="@style/Theme.TailorMade.RadioImageButton"
                android:checked="true"
                android:drawableTop="@drawable/drawable_role_user"
                android:text="@string/role_user_label" />

            <RadioButton
                android:id="@+id/radio_button_select_role_tailor"
                style="@style/Theme.TailorMade.RadioImageButton"
                android:drawableTop="@drawable/drawable_role_tailor"
                android:text="@string/role_tailor_label" />

        </RadioGroup>

        <Button
            android:id="@+id/button_submit_role"
            style="@style/Theme.TailorMade.Button.Rounded"
            android:layout_width="@dimen/dp_0"
            android:text="@string/next_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>