<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.signIn.view.SignInFragment">

        <ImageView
            android:id="@+id/image_tailormade"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:src="@drawable/ic_tailormade_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_tailormade"
            style="@style/TextAppearance.TailorMade.Headline1.Primary"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_48"
            android:gravity="center_vertical"
            android:text="@string/tailormade_label"
            app:layout_constraintStart_toEndOf="@id/image_tailormade"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear_layout_sign_in_info"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_64"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_tailormade">

            <TextView
                android:id="@+id/text_view_title"
                style="@style/TextAppearance.TailorMade.Headline3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_label" />

            <TextView
                android:id="@+id/text_view_description"
                style="@style/TextAppearance.TailorMade.Body2.BlackHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/enter_email_password_label" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_sign_in_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_label"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:hint="@string/password_label"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_visibility_off"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_sign_in"
                style="@style/Theme.TailorMade.Button.Rounded"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dp_40"
                android:text="@string/sign_in_label" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_go_to_sign_up"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_32"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_go_to_sign_up_label"
                style="@style/TextAppearance.TailorMade.Body1.BlackHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_label" />

            <Button
                android:id="@+id/button_go_to_sign_up"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_label" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>